Finished MakeyMakey interface, also have feeds displaying on map now.

--- a/mapping/styles.css
+++ b/mapping/styles.css
@@ -1,4 +1,5 @@
 /* CSS crunched with Crunch - http://crunchapp.net/ */
+body{word-wrap:break-word;}
 .hidden{display:none;visibility:hidden;width:0px;height:0px;}
 .big-text{font-size:36px;line-height:36px;}
 .medium-text{font-size:18px;line-height:24px;}
