--- a/mapping/styles.less
+++ b/mapping/styles.less
@@ -255,10 +255,39 @@ header {
         height:500px;
         }
     #selectedFeeds{
-        margin:0 auto;
+        float:left;
         background:rgba(0,0,0,0.1);
         width:70%;
         height:500px;
+        }
+    #listOfFeeds{
+        float:left;
+        margin-left:5%;
+          background:rgba(0,0,0,0.1);
+          width:25%;
+          height:500px;
+            #quickInfoSummation{
+                background :rgba(0,0,0,0.1);
+            width:100%;
+            height:400px;
+            overflow-y:scroll;
+                ul{
+                    list-style:none;
+                    li{
+                            .quickWrapper{
+                                 background-color:rgba(255,255,255,0.2);
+                                float:left;
+                                width:100%;
+                                margin-top:5px;
+                                margin-bottom:5px;
+                                    .dataId{}
+                                    .curVal{}
+                                    .maxVal{}
+                                    .minVal{}
+                                }
+                        }
+                    }
+            }
         }
     #map{
         float:left;
@@ -272,6 +301,55 @@ header {
           background:rgba(0,0,0,0.1);
           width:25%;
           height:500px;
+        #dataWrapper{
+                #creator{
+                        a{
+                            color:#ffffff;
+                        }
+                    }
+                #feedDescription{
+                    font-style:italic;
+                    }
+                    #dataStreamDataList{
+                        margin-top:20px;
+                        height:350px;
+                        overflow-y:scroll;
+                        ul{list-style:none;
+                            li{
+                                .chosen{
+                                    background-color:rgba(100,255,100,0.2);
+                                    }
+                            .listed{
+                                background-color:rgba(255,255,255,0.5) !important;
+                                }
+                            .dataWrapping{
+                                 background-color:rgba(255,255,255,0.2);
+                                float:left;
+                                width:100%;
+                                margin-top:5px;
+                                margin-bottom:5px;
+                                .listItem{                                    
+                                    width:60%;
+                                    float:left;
+                                    #id{font-weight:bold;}
+                                    #value{}  
+                                    }
+                                .ButtonSection{
+                                    width:40%;
+                                    float:right;
+                                        input[type="button"]{
+                                            float:right;
+                                            width:70px;
+                                            height:32px;                                        
+                                            #addToMusic{}
+                                            #removeFromMusic{}
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+            }
         }
     }
 }
