--- a/mapping/styles.less
+++ b/mapping/styles.less
@@ -248,11 +248,45 @@ header {
         padding:20px;
         background:rgba(0,0,0,0.1);
         width:100%;
-    #userZone{
+    #audioSelection{
+        background:rgba(0,0,0,0.1);
+        margin : 0 auto 20px auto;
+        width:90%;
+        height:90px;
+        #audioList{
+            float:left;
+            }
+        #previewButton{
+            float:left;
+            }
+        #addToListButton{
+            float:left;
+            }
+        #soundDescriptionPreview{
+            float:left;
+            height:100%;
+            overflow-y:scroll;
+            width:300px;
+            margin-right:10px;
+            }
+        }
+    #audioWrapper{
+    }
+    #audioZone{
         margin:0 auto;
         background:rgba(0,0,0,0.1);
-        width:70%;
-        height:500px;
+        width:90%;
+        height:390px;
+        #audioZoneList{
+                width:100%;
+                list-style:none;
+                    li{
+                        float:left;
+                        width:100%;
+                        margin:5px 0 5px 0;
+                        background:rgba(0,0,0,0.1);
+                    }
+            }
         }
     #selectedFeeds{
         float:left;
