--- a/mapping/styles.less
+++ b/mapping/styles.less
@@ -233,7 +233,7 @@ header {
 	}
 	h2 {
 		.medium-text;
-            margin-left: 25%;
+           // margin-left: 25%;
              margin-bottom:10px;
 		span {
 			clear: left;
@@ -312,7 +312,7 @@ header {
                                 .graphContainer{
                                     float:left;
                                     width:30%;
-                                    height:100px;
+                                    height:130px;
                                 }
                                 .options{
                                     float:left;
