Added soundboard, sorted oout glitch whereby adding a sound cuts out all currently playing sounds. .innerHTML += '' is bad.

--- a/mapping/styles.css
+++ b/mapping/styles.css
@@ -1,4 +1,5 @@
 /* CSS crunched with Crunch - http://crunchapp.net/ */
+*{border-radius:10px;}
 body{word-wrap:break-word;}
 .hidden{display:none;visibility:hidden;width:0px;height:0px;}
 .big-text{font-size:36px;line-height:36px;}
@@ -31,7 +32,7 @@ header .tri_bottom{float:left;width:0px;height:0px;border-style:solid;border-wid
 .content .wrapper #audioSelection #previewButton{float:left;}
 .content .wrapper #audioSelection #addToListButton{float:left;}
 .content .wrapper #audioSelection #soundDescriptionPreview{float:left;height:100%;overflow-y:scroll;width:300px;margin-right:10px;}
-.content .wrapper #audioZone{margin:0 auto;background:rgba(0, 0, 0, 0.1);width:90%;height:390px;}.content .wrapper #audioZone #audioZoneList{width:100%;list-style:none;}.content .wrapper #audioZone #audioZoneList li{float:left;width:100%;margin:5px 0 5px 0;background:rgba(0, 0, 0, 0.1);}
+.content .wrapper #audioZone{margin:0 auto;background:rgba(0, 0, 0, 0.1);width:90%;height:390px;}.content .wrapper #audioZone #audioZoneList{width:100%;list-style:none;padding-left:1%;}.content .wrapper #audioZone #audioZoneList li{float:left;width:31%;margin:15px 1%;background:rgba(0, 0, 0, 0.1);}
 .content .wrapper #selectedFeeds{float:left;background:rgba(0, 0, 0, 0.1);width:70%;height:500px;overflow-y:scroll;}.content .wrapper #selectedFeeds #selectedFeedsList{width:100%;list-style:none;}.content .wrapper #selectedFeeds #selectedFeedsList li{float:left;width:100%;margin:5px 0 5px 0;background:rgba(0, 0, 0, 0.1);}.content .wrapper #selectedFeeds #selectedFeedsList li .graphDataContainer{width:100%;float:left;}.content .wrapper #selectedFeeds #selectedFeedsList li .graphDataContainer .graphInfo{width:30%;float:left;}
 .content .wrapper #selectedFeeds #selectedFeedsList li .graphDataContainer .graphContainer{float:left;width:30%;height:130px;}
 .content .wrapper #selectedFeeds #selectedFeedsList li .graphDataContainer .options{float:left;width:40%;}
