--- a/mapping/styles.less
+++ b/mapping/styles.less
@@ -7,7 +7,11 @@
 
 @base: 32px;
 @m-height: 16px;
+*{
+    border-radius:10px;
+    }
 body{
+    
     word-wrap:break-word;
     }
 .hidden{
@@ -279,10 +283,11 @@ header {
         #audioZoneList{
                 width:100%;
                 list-style:none;
+                padding-left:1%;
                     li{
                         float:left;
-                        width:100%;
-                        margin:5px 0 5px 0;
+                        width:31%;
+                        margin:15px 1%;
                         background:rgba(0,0,0,0.1);
                     }
             }
